# fpga-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  new_vendor.md
.github/workflows/: ci.yml
examples/: README.md
examples/blink/: README.md  blink.v  blink.xdc  blink_tb.sv
examples/core_features_demo/: README.md  verify_core_features.py
examples/timing_closure_demo/: README.md  critical_path.v  critical_path.xdc  critical_path_fixed.v  verify_timing_closure.py
methodology/: bitstream_handoff.md  cdc_audit.md  full_flow.md  resource_budgeting.md  sim_signoff.md  soc_bringup.md  timing_closure.md
scripts/: compare_with_synthpilot.py  gen_tool_index.py  smoke_e2e.py
src/: __init__.py  __main__.py  _client_registry.py  cli.py  config.py  detect.py  prompts.py  server.py  session.py
src/tool_defs/: __init__.py  _handlers.py  anlogic.py  common.py  quartus.py  vivado.py
src/transports/: __init__.py  _base_tcp.py  _tcl_client.py  _tcl_helpers.py  anlogic.py  base.py  factory.py  quartus.py  vivado.py
tcl/: _omni_protocol.tcl  anlogic_server.tcl  quartus_server.tcl  vivado_server.tcl
tests/: _mock_tcl_server.py  test_anlogic_backend.py  test_cli.py  test_config.py  test_package.py  test_quartus_backend.py  test_server.py  test_tcl_helpers.py  test_tool_defs.py  test_vivado_backend.py
